--- a/templates/osustavu.html
+++ b/templates/osustavu.html
@@ -7,6 +7,6 @@
 <p>Sustav uoop.riteh.hr namijenjen je provođenju nastave, odnosno kao pomoć u savladavanju gradiva iz predmeta Uvod u objektno orijentirano programiranje na Preddiplomskom sveučilišnom studiju računarstva.</p>
 <p>Osnovna funkcija sustava je automatizirana evaluacija programskih rješenja.</p>
 <p>Pristup trenutno imaju samo studenti računarstva Tehničkog fakulteta u Rijeci koji su upisali navedeni predmet.</p>
-<p>Web stranica nastala je kao projekt studenata iz predmeta Programsko inžinjerstvo na Preddiplomskom sveučilišnom studiju računarstva. </p>
+<p>Web stranica nastala je kao projekt studenata iz predmeta Programsko inženjerstvo na Preddiplomskom sveučilišnom studiju računarstva. </p>
 
 {% endblock content %}
