--- a/templates/osustavu.html
+++ b/templates/osustavu.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 
-<div style = "width:50%; font-size:large; text-align:justify;display: block;margin:0">
+<div class = "centeredDiv">
 <br>
 <h1 id="o-sustavu">O sustavu</h1>
 <p>Sustav uoop.riteh.hr namijenjen je provođenju nastave, odnosno kao pomoć u savladavanju gradiva iz predmeta Uvod u objektno orijentirano programiranje na Preddiplomskom sveučilišnom studiju računarstva.</p>
