--- a/templates/quiz.html
+++ b/templates/quiz.html
@@ -7,7 +7,7 @@
       display: none;
   }
 </style>
-<div style = "width:50%; font-size:large; text-align:center;margin: 0">
+<div class = "centeredTextDiv">
   <h1>{{ quizs.title }}</h1>
   <br>
 
