--- a/static/components/css/cssCodes.css
+++ b/static/components/css/cssCodes.css
@@ -15,3 +15,7 @@
     font-size:large; 
     text-align:center;
     margin: 0;}
+.questionText{
+        font-size:large; 
+        font-weight: bold;
+        }
