--- a/templates/test.html
+++ b/templates/test.html
@@ -37,7 +37,7 @@
                             {% endif %}
                         </td>
                         <td>
-                            <a href="{% url 'uoop:assignment' assignment.id %}">{{ assignment.title }}</a>
+                            <a href="{% url 'app:assignment' assignment.id %}">{{ assignment.title }}</a>
                         </td>
                         <td class="testresults">
                             <div class="progress">
