--- a/templates/home.html
+++ b/templates/home.html
@@ -15,7 +15,7 @@
                         <ul>
                             {% for course in subCourses %}
                                 <li>
-                                    <a href="/course/{{ course.id }}/">{{ course.title }}</a>
+                                    <a href="{% url 'app:courses' course.id %}">{{ course.title }}</a>
                                 </li>
                             {% endfor %}
                         </ul>
