--- a/templates/assignment.html
+++ b/templates/assignment.html
@@ -149,19 +149,15 @@
                 </div>
             </div>
             {% endif %}
-<<<<<<< Updated upstream
-
-            <form id="form-uploadJar" onsubmit="JARsubmited()" method="post" enctype="multipart/form-data" style="margin-top: 2%">
-=======
             {% if junit %}
             <div id="accordion">
                 <div class="card">
                     <div class="card-header">
-                    <a class="card-link" data-toggle="collapse" href="#collapseOne">
+                    <a class="collapsed card-link" data-toggle="collapse" href="#collapseOne">
                         JUNIT
                     </a>
                     </div>
-                    <div id="collapseOne" class="collapse show" data-parent="#accordion">
+                    <div id="collapseOne" class="collapse" data-parent="#accordion">
                     <div class="card-body">
                         {{ junit }}
                     </div>
@@ -169,8 +165,7 @@
                 </div>
             </div>
              {% endif %}
-            <form id="form-uploadJar" method="post" enctype="multipart/form-data" style="margin-top: 2%">
->>>>>>> Stashed changes
+            <form id="form-uploadJar" onsubmit="JARsubmited()" method="post" enctype="multipart/form-data" style="margin-top: 2%">
                 {% csrf_token %}
                 {{ form.as_p }}
                 <button type="submit" class="btn btn-primary">
