--- a/templates/assignment.html
+++ b/templates/assignment.html
@@ -149,7 +149,22 @@
                 </div>
             </div>
             {% endif %}
-
+            {% if junit %}
+            <div id="accordion">
+                <div class="card">
+                    <div class="card-header">
+                    <a class="collapsed card-link" data-toggle="collapse" href="#collapseOne">
+                        JUNIT
+                    </a>
+                    </div>
+                    <div id="collapseOne" class="collapse" data-parent="#accordion">
+                    <div class="card-body">
+                        {{ junit }}
+                    </div>
+                    </div>
+                </div>
+            </div>
+             {% endif %}
             <form id="form-uploadJar" onsubmit="JARsubmited()" method="post" enctype="multipart/form-data" style="margin-top: 2%">
                 {% csrf_token %}
                 {{ form.as_p }}
