--- a/templates/base.html
+++ b/templates/base.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
+{% load cms_tags menu_tags sekizai_tags %}
 {% load static %}
-{% comment %} {% load cms_tags sekizai_tags %} {% endcomment %}
 <html lang="en">
     <head>
-        {% comment %} <title>{% page_attribute "page_title" %}</title>
-        {% render_block "css" %} {% endcomment %}
+        <title>{% page_attribute "page_title" %}</title>
+        {% render_block "css" %}
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -35,9 +35,8 @@
         <script src="{% static 'bootstrap-4.6.1-dist/js/bootstrap.min.js' %}" ></script>
     </head>
     <body>
-        {% comment %} {% cms_toolbar %}
-        {% placeholder "content" %}
-        {% render_block "js" %} {% endcomment %}
+        {% cms_toolbar %}
+        
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             {% if user.is_authenticated %}
                 <a class="navbar-brand" style="margin-left: 23%" href="{% url 'app:home' %}">UOOP</a>
@@ -73,7 +72,11 @@
             </div>
         </nav>
         <div style="margin-left: 23%;">
-            {% block content %}{% endblock %}
+            {% block content %}
+                {% placeholder "feature" %}
+                {% placeholder "content" %}
+                {% placeholder "splashbox" %}
+            {% endblock %}
         </div>
         <!-- <div class="footer">
             <div class="container">
@@ -82,5 +85,6 @@
                 </p>
             </div>
         </div> -->
+        {% render_block "js" %}
     </body>
 </html>
