--- a/uoop/templates/home.html
+++ b/uoop/templates/home.html
@@ -1,4 +1,4 @@
-{% load cms_tags sekizai_tags %}
+{% load cms_tags menu_tags sekizai_tags %}
 <html>
     <head>
         <title>{% page_attribute "page_title" %}</title>
