--- a/templates/osustavu.html
+++ b/templates/osustavu.html
@@ -2,5 +2,7 @@
 {% load cms_tags %}
 
 {% block content %}
+<div style="display: flex; flex-direction: column; width: 75%;">
 {% static_placeholder 'placeholder' %}
+</div>
 {% endblock content %}
